ingress/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: earthdx-service
spec:
  type: ClusterIP
  selector:
    app: earthdx-app
  ports:
  - port: 80
    targetPort: 80
