ingress/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: earthdx-ingress
#  annotations:
# https: (ingressClassname, cluster-issuer)
spec:
  ingressClassName: nginx 
  rules:
  - host: k8s-earthdx-demo.devnerd.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: earthdx-service
            port: 
              number: 80
